--- a/Resources/views/Shared/header-bar.html.twig
+++ b/Resources/views/Shared/header-bar.html.twig
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-sm-6 brand-logo">
         <i class="fa fa-shopping-cart fa-5x pull-left"></i>
-        <h1>Mobile Cart</h1>
+        <h1 class="store-name">COMPANY NAME</h1>
     </div>
     <div class="col-sm-6 search-bar">
         <div class="search-bar-links">
