--- a/Resources/views/Customer/forgot_password.html.twig
+++ b/Resources/views/Customer/forgot_password.html.twig
@@ -2,24 +2,26 @@
 {% form_theme form 'bootstrap_3_layout.html.twig' %}
 {% block content %}
 
-<div class="container">
-    <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <h1 class="text-center login-title">Forgot Password</h1>
+                <div class="account-wall">
 
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h2 class="panel-title">Forgot Password</h2>
-            </div>
-            <div class="panel-body">
-                {{ form_start(form) }}
-                {{ form_widget(form) }}
-                <div class="form-actions">
-                    <input type="submit" class="btn btn-success pull-left" value="Register">
+                    <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
+
+                    {{ form_start(form, {'attr':{'class':'form-signin'}}) }}
+                    {{ form_widget(form) }}
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
+                    {{ form_end(form) }}
                 </div>
-                {{ form_end(form) }}
+                <a href="{{ path('login_route') }}" class="text-center new-account">Login</a>
             </div>
         </div>
-
     </div>
-</div>
 
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
