--- a/Resources/views/Customer/register.html.twig
+++ b/Resources/views/Customer/register.html.twig
@@ -4,33 +4,25 @@
 
     <div class="container">
         <div class="row">
-            {{ form_start(form) }}
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <h1 class="text-center login-title">Create Account</h1>
+                <div class="account-wall">
+                    {#
+                    <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
+                    #}
 
-            {% if form_sections is defined %}
-                {% for section, sectionData in form_sections %}
-                    <div id="section-{{ section }}" class="">
-                        <div class="panel panel-default">
-                            {% if sectionData.label|length > 0 %}
-                            <div class="panel-heading">
-                                <h2 class="panel-title">{{ sectionData.label }}</h2>
-                            </div>
-                            {% endif %}
-                            <div class="panel-body">
-                                {% for field in sectionData.fields %}
-                                    {{ form_row(form.offsetGet(field)) }}
-                                {% endfor %}
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-            {% endif %}
-
-                <div class="form-actions">
-                    <input type="submit" class="btn btn-success pull-right" value="Register">
+                    {{ form_start(form, {'attr':{'class':'form-signin'}}) }}
+                    {{ form_widget(form) }}
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+                    {{ form_end(form) }}
                 </div>
-
-            {{ form_end(form) }}
+                <a href="{{ path('login_route') }}" class="text-center new-account">Login</a>
+            </div>
         </div>
     </div>
 
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
 {% endblock %}
