--- a/Resources/views/Customer/register_check_email.html.twig
+++ b/Resources/views/Customer/register_check_email.html.twig
@@ -3,8 +3,18 @@
 
     <div class="container">
         <div class="row">
-            <p>Please check your email to confirm your registration.</p>
+            <div class="col-sm-6 col-md-4 col-md-offset-4">
+                <h1 class="text-center login-title">Thank You</h1>
+                <div class="account-wall">
+                    <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
+                    <p class="text-center bold">Please check your email, to confirm your account.</p>
+                </div>
+            </div>
         </div>
     </div>
 
 {% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
+{% endblock %} s
