--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -22,17 +22,11 @@
             <h1 class="text-center login-title">Sign in to Continue</h1>
             <div class="account-wall">
 
-                <!--
-                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
-                -->
-
-                <!--
-                <i class="profile-img glyphicon glyphicon-shopping-cart"> </i>
-                -->
+                <img class="profile-img" src="{{ asset('bundles/mobilecartfrontend/images/user-icon.svg') }}" alt="">
 
                 <form class="form-signin" action="{{ path('login_check') }}" method="post">
-                    <input type="text" id="username"class="form-control" name="_username" value="{{ last_username }}" required autofocus />
-                    <input type="password" id="password" class="form-control" name="_password" required />
+                    <input type="text" id="username"class="form-control" name="_username" value="{{ last_username }}" placeholder="Email" required autofocus />
+                    <input type="password" id="password" class="form-control" name="_password" placeholder="Password" required />
 
                     {#If you want to control the URL the user is redirected to on success (more details below) #}
                     {% if getRedirect() %}
@@ -56,7 +50,5 @@
 
 {% block stylesheets %}
     {{ parent() }}
-
     <link href="{{ asset('bundles/mobilecartfrontend/css/login.css') }}" rel="stylesheet" type="text/css" />
-
 {% endblock %}
