--- a/Resources/views/frontend-layout.html.twig
+++ b/Resources/views/frontend-layout.html.twig
@@ -66,6 +66,8 @@
                         <li><a href="{{ path('cart_home') }}">Home</a></li>
                         <li><a href="{{ path('cart_products') }}">Products</a></li>
                         <li><a href="{{ path('cart_categories') }}">Categories</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown header-cart">
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <i class="glyphicon glyphicon-shopping-cart icon-white"> </i>
@@ -73,19 +75,19 @@
                             </a>
                             <div class="dropdown-menu cart-dropdown">
                                 {% for total in cartTotals() %}
-                                <div class="row">
-                                    <div class="col-xs-6">{{ total.label }}</div>
-                                    <div class="col-xs-6">{{ decorate(total.value) }}</div>
-                                </div>
+                                    <div class="row">
+                                        <div class="col-xs-6">{{ total.label }}</div>
+                                        <div class="col-xs-6">{{ decorate(total.value) }}</div>
+                                    </div>
                                 {% endfor %}
 
                                 {% for item in cartItems() %}
-                                <div class="row">
-                                    <div class="col-xs-8">
-                                        <a href="{{ path('cart_product_view', { 'slug': item.get('slug') }) }}">{{ item.get('name') }}</a>
+                                    <div class="row">
+                                        <div class="col-xs-8">
+                                            <a href="{{ path('cart_product_view', { 'slug': item.get('slug') }) }}">{{ item.get('name') }}</a>
+                                        </div>
+                                        <div class="col-xs-4">{{ item.get('qty') }} x {{ decorate(item.get('price')) }}</div>
                                     </div>
-                                    <div class="col-xs-4">{{ item.get('qty') }} x {{ decorate(item.get('price')) }}</div>
-                                </div>
                                 {% endfor %}
 
                                 <div class="row">
@@ -105,18 +107,11 @@
                                 <li><a href="{{ path('cart_currency', {'code':'USD'}) }}">$</a></li>
                             </ul>
                         </li>
-                        <!--
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">ENG <b class="caret"></b></a>
-                            <ul class="pull-right dropdown-menu">
-                                <li><a href="#" tabindex="-1">English</a></li>
-                                <li><a href="#" tabindex="-1">French</a></li>
-                            </ul>
-                        </li>
-                        -->
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"> </i> <b class="caret"></b></a>
-                            <ul class="pull-right dropdown-menu">
+                        <li class="dropdown user-menu">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false">
+                                <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                            </a>
+                            <ul class="dropdown-menu dropdown-user">
                                 {% if is_granted('ROLE_ADMIN') %}
                                     <li><a href="{{ path('cart_admin_dashboard') }}">Admin Panel</a></li>
                                     <li><a href="{{ path('logout') }}">Logout</a></li>
